개발에 사용할 개별 application 설정파일 추가

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,9 @@ bin/
 !**/src/main/**/bin/
 !**/src/test/**/bin/
 
+### application.properties 개별설정 ###
+application-private.yml
+
 ### IntelliJ IDEA ###
 .idea
 *.iws
